<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:backgroundTint="#FFF5E1"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp">

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:padding="16dp">

<ImageView
    android:id="@+id/IVPlanetImage"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:scaleType="centerCrop" />

<TextView
    android:id="@+id/TVName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/nombrePlan"
    android:textStyle="bold"
    android:textSize="18sp"
    android:paddingTop="8dp"/>

<TextView
    android:id="@+id/TVDescription"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/descripcionPlan"
    android:textSize="14sp"
    android:paddingTop="4dp"/>

<TextView
    android:id="@+id/TVStatus"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/estado"
    android:textSize="14sp"
    android:paddingTop="4dp"
    android:paddingBottom="8dp"/>

    <TextView
        android:id="@+id/TVCharactersTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personajes"
        android:textSize="14sp"
        android:paddingTop="4dp"
        android:paddingBottom="8dp"/>

    <TextView
        android:id="@+id/TVCharacters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:paddingTop="4dp"
        android:paddingBottom="8dp"/>

</LinearLayout>

    </androidx.cardview.widget.CardView>
