<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:backgroundTint="#FFF5E1"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/IVPhoto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/TVName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/IVPhoto"
            app:layout_constraintStart_toStartOf="@+id/IVPhoto"/>

        <TextView
            android:id="@+id/TVKi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ki"
            android:textSize="18sp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/IVPhoto"/>

        <TextView
            android:id="@+id/TVMaxKi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxKi"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/TVKi"
            app:layout_constraintStart_toStartOf="@+id/TVKi"/>

        <TextView
            android:id="@+id/TVRace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/race"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/TVMaxKi"
            app:layout_constraintStart_toStartOf="@+id/TVKi"/>

        <TextView
            android:id="@+id/TVGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/TVRace"
            app:layout_constraintStart_toStartOf="@+id/TVKi"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>